# monorepo-scaffold

./: Makefile  README.md  pnpm-workspace.yaml  pyproject.toml
apps/api/: requirements.txt
